--- a/xss/production/test/jquery2.html
+++ b/xss/production/test/jquery2.html
@@ -27,7 +27,26 @@ $(function() {
 <body>
             <div id='application'>
 <div id="main">
-</div>
+            <table border="0">
+        <tr><td>
+            component goes here l1
+        </td><td>
+            <table border="0">
+        <tr>
+            component goes here t1
+        </tr><tr>
+            client goes here c1
+        </tr><tr>
+            component goes here b1
+        </tr>
+            </table>
+        </td><td>
+            component goes here r2
+        </td><td>
+            component goes here r1
+        </td></tr>
+            </table>
+        </div>
                 </div>
             </body>
 </html>
