--- a/xss/production/test/jquery5.html
+++ b/xss/production/test/jquery5.html
@@ -64,6 +64,9 @@ $(function() {
 		btn1.click( function() { 
 			simple_dialog.dialog('open');
 		});
+		btn2.click( function() { 
+        alert("Hello, World");
+		});
         simple_dialog.dialog({
             modal: true,
                 autoOpen: false,
