--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title></title>
-<script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
-<script type="text/javascript" src="../js/jquery.utils.js"></script>
-<script type="text/javascript" src="../js/utils.js"></script>
-<script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms-event.js"></script>
-<script type="text/javascript" src="../js/keys.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/ms-sequence.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+function build_application(host, canvasId)
+{
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -85,7 +73,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var img1;var img2;var fade1;var fade2;
             fade_in = Class.create(ms.state.Sequence,
         {
     initialize: function($super
@@ -130,7 +117,7 @@ var img1;var img2;var fade1;var fade2;
 	);
 window.onload = function() 
 {
-	drawingCanvas = document.getElementById("myCanvas");
+	drawingCanvas = document.getElementById("");
     g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
@@ -193,8 +180,8 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    img1 = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/img1.png");
+		    img1 = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         img1 = img1;
             img1.set_x(100);
             img1.set_y(100);
@@ -207,8 +194,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    img2 = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/img1.png");
+		    img2 = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         img2 = img2;
             img2.set_x(160);
             img2.set_y(100);
@@ -242,10 +229,4 @@ g_sequence_manager);
 		});
 	}
 }
-</script>
-</head>
-<body>	
-	<canvas id="myCanvas" width="600" height="400"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
-</body>
-</html>
+}
