--- a/xss/production/test/3js_class_test_1.html
+++ b/xss/production/test/3js_class_test_1.html
@@ -31,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = 600;
 var app_height = 400;
 var lbl0;
@@ -149,12 +150,10 @@ application.events.dispatch("updates", []);
 application.events.dispatch("switch_cameras", []);
 }
 var my_plane;var scene;var camera_1;
-        function create_my_plane(
+    function create_my_plane(
     width,height,x_segments,y_segments ) { 
     var my_plane;
-	    var my_plane_plane = 
-new THREE.Plane(
-);
+	    my_plane_plane = new THREE.Plane(width, height, x_segments, y_segments) ;
 	    my_plane = new THREE.Mesh(my_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(my_plane);
 		my_plane.events = new ms.event.EventHolder();
@@ -217,18 +216,15 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl0 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl0 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned plane");
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-45,1.5,1,10000);
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
             application.img_array = ["images/test1.png", "images/test2.png", "images/test3.png", "images/test4.png", "images/test5.png"];
