--- a/xss/production/test/jquery6.html
+++ b/xss/production/test/jquery6.html
@@ -1,60 +1,353 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by Free CSS Templates
+http://www.freecsstemplates.org
+Released for free under a Creative Commons Attribution 2.5 License
+Name       : Refillable  
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20120325
+-->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>TITLE</title>
-<script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
-<script type="text/javascript" src="../js/jquery-idiom.js"></script>
-<link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css">
-<script type="text/javascript">
-$(function() {
-			var main = $("#main");
-			var acc1 = $("#acc1");
-			var __div1 = $("#__div1");
-			var __div2 = $("#__div2");
-			var __div3 = $("#__div3");
-			var __div4 = $("#__div4");
-			var image_container = $("#image_container");
-			var application = $("#application");
-        acc1.accordion({
-            fillSpace: true,
-        });
-});
-</script>
-<style>
-#main {width : 800px;height : 400px;position : relative}
-#acc1 {left : 0px;top : 0px;width : 300px;height : 400px;position : absolute}
-#image_container {left : 300px;top : 0px;width : 600px;height : 400px;position : absolute}
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>Refillable   by Free CSS Templates</title>
+<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+<style type="text/css">
+@import "gallery.css";
 </style>
 </head>
 <body>
-            <div id='application'>
-<div id="main">
-            <table border="0"  width = "800"  height = "400" >
-            </table>
-<div id="acc1">
-            <h3><a href="#">Plain HTML</a></h3>
-<div id="__div1">
-<p>We allow you to specify your own html whenever you feel convinient.</p>
-</div>
-            <h3><a href="#">Remote HTML</a></h3>
-<div id="__div2">
-<p>When using tabs you can simply scpecify an "href" attribute and jQuery will do the rest.</p>
-</div>
-            <h3><a href="#">Common Controls</a></h3>
-<div id="__div3">
-<p>The good old buttons, checkboxes and labels we're used to. Clickables.</p>
-</div>
-            <h3><a href="#">JQuery UI</a></h3>
-<div id="__div4">
-<p>Advanced components, courtesy of</p><a href="www.jqueryui.com">jQuery UI</a>
-</div>
-</div>
+<div id="wrapper">
+	<div id="header">
+		<div id="logo">
+			<h1><a href="#">Refillable </a></h1>
+			<p> design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
+		</div>
+	</div>
+	<!-- end #header -->
+	<div id="menu">
+		<ul>
+			<li class="current_page_item"><a href="#">Home</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Photos</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Links</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
+	<!-- end #menu -->
+	<div id="page">
+		<div id="page-bgtop">
+			<div id="page-bgbtm">
+				<div id="content">
+					<div id="gallery-wrapper">
+						<div id="gallery">
+                            <div id="target-container" style="padding: 10px">
 				<canvas id="image_container"
 			>
 				</canvas>
+                            </div>
+                            <div id="thumbnail-bg">
+								<ul class="thumbnails">
+									<li><img id="img1" class="active" src="images/img04.jpg" title="Monument Valley" alt="" width="604" height="375" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.4" /></li>
+									<li><img id="img2" src="images/img05.jpg" title="Honey Bee" alt="" width="100" height="75"  onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.4" /></li>
+									<li><img id="img3" src="images/img06.jpg" title="Cup of Coffee" alt="" width="100" height="75"  onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.4" /></li>
+									<li><img id="img4" src="images/img07.jpg" title="Grand Tetons" alt="" width="100" height="75"  onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.4" /></li>
+								</ul>
+							</div>
+							<br class="clear" />
+						</div>
+						<!-- end -->
+					</div>
+					<div style="clear: both;">&nbsp;</div>
+				</div>
+				<!-- end #content -->
+				<div id="sidebar">
+<div id="acc1">
+            <h3><a href="#">Brightness</a></h3>
+<div id="__div1">
+				<label id="__label1"
+			>
+					Level
+				</label>
+<br/>
+<br/>
+				<div id="brightness"
+			>
+				</div>
+<br/>
+				<label id="__label2"
+			>
+					Constrast
+				</label>
+<br/>
+<br/>
+				<div id="constrast"
+			>
+				</div>
 </div>
-                </div>
-                </body>
+            <h3><a href="#">Color</a></h3>
+<div id="__div2">
+				<label id="__label3"
+			>
+					Red
+				</label>
+<br/>
+<br/>
+				<div id="red"
+			>
+				</div>
+<br/>
+				<label id="__label4"
+			>
+					Blue
+				</label>
+<br/>
+<br/>
+				<div id="blue"
+			>
+				</div>
+<br/>
+				<label id="__label5"
+			>
+					Green
+				</label>
+<br/>
+<br/>
+				<div id="green"
+			>
+				</div>
+</div>
+            <h3><a href="#">HSL</a></h3>
+<div id="__div3">
+				<label id="__label6"
+			>
+					Hue
+				</label>
+<br/>
+<br/>
+				<div id="hue"
+			>
+				</div>
+<br/>
+				<label id="__label7"
+			>
+					Saturation
+				</label>
+<br/>
+<br/>
+				<div id="saturation"
+			>
+				</div>
+<br/>
+				<label id="__label8"
+			>
+					Lightness
+				</label>
+<br/>
+<br/>
+				<div id="lightness"
+			>
+				</div>
+</div>
+            <h3><a href="#">Noise</a></h3>
+<div id="__div4">
+				<label id="__label9"
+			>
+					Amount
+				</label>
+<br/>
+<br/>
+				<div id="amount"
+			>
+				</div>
+<br/>
+				<label id="__label10"
+			>
+					Strength
+				</label>
+<br/>
+<br/>
+				<div id="strength"
+			>
+				</div>
+<br/>
+<br/>
+            <div id="mono">
+        <input id="mono_input" type="checkbox" name="__div4"/>
+        <label id="mono_label" for="mono_input"> Mono </label>
+            </div>
+</div>
+            <h3><a href="#">Glow</a></h3>
+<div id="__div5">
+				<label id="__label11"
+			>
+					Amount
+				</label>
+<br/>
+<br/>
+				<div id="glow_amount"
+			>
+				</div>
+<br/>
+				<label id="__label12"
+			>
+					Radius
+				</label>
+<br/>
+<br/>
+				<div id="radius"
+			>
+				</div>
+<br/>
+</div>
+</div>
+				</div>
+				<!-- end #sidebar -->
+				<div style="clear: both;">&nbsp;</div>
+			</div>
+		</div>
+	</div>
+	<!-- end #page -->
+</div>
+<div id="footer">
+	<p>Copyright (c) 2012 Sitename.com. All rights reserved. Design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
+</div>
+<!-- end #footer -->
+            <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
+            <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
+            <script type="text/javascript" src="../js/jquery-idiom.js"></script>
+            <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css"></link>
+<style>
+#acc1 {height : 490px}
+#image_container {width : 605px;height : 375px}
+</style>
+<script type="text/javascript">
+        var application = {};
+	application.set_image = function(id) 
+	{
+		var image = document.getElementById(id);
+var target = document.getElementById("image_container");
+var context = target.getContext("2d");
+context.drawImage(image, 0, 0, target.width, target.height);
+	};
+	application.get_image_data = function() 
+	{
+		var target = document.getElementById("image_container");
+var context = target.getContext("2d");
+return context.getImageData(0, 0, target.width, target.height);
+	};
+	application.set_image_data = function(data) 
+	{
+		var target = document.getElementById("image_container");
+var context = target.getContext("2d");
+context.putImageData(data, 0, 0);
+	};
+		application.init = function() { 
+        $("#img1").click(function() { application.set_image("img1"); });
+        $("#img2").click(function() { application.set_image("img2"); });
+        $("#img3").click(function() { application.set_image("img3"); });
+        $("#img4").click(function() { application.set_image("img4"); });
+			application.set_image("img2");
+		}
+			var acc1 = $("#acc1");
+			var __div1 = $("#__div1");
+			var __label1 = $("#__label1");
+			var __br1 = $("#__br1");
+			var __br2 = $("#__br2");
+			var brightness = $("#brightness");
+			var __br3 = $("#__br3");
+			var __label2 = $("#__label2");
+			var __br4 = $("#__br4");
+			var __br5 = $("#__br5");
+			var constrast = $("#constrast");
+			var __div2 = $("#__div2");
+			var __label3 = $("#__label3");
+			var __br6 = $("#__br6");
+			var __br7 = $("#__br7");
+			var red = $("#red");
+			var __br8 = $("#__br8");
+			var __label4 = $("#__label4");
+			var __br9 = $("#__br9");
+			var __br10 = $("#__br10");
+			var blue = $("#blue");
+			var __br11 = $("#__br11");
+			var __label5 = $("#__label5");
+			var __br12 = $("#__br12");
+			var __br13 = $("#__br13");
+			var green = $("#green");
+			var __div3 = $("#__div3");
+			var __label6 = $("#__label6");
+			var __br14 = $("#__br14");
+			var __br15 = $("#__br15");
+			var hue = $("#hue");
+			var __br16 = $("#__br16");
+			var __label7 = $("#__label7");
+			var __br17 = $("#__br17");
+			var __br18 = $("#__br18");
+			var saturation = $("#saturation");
+			var __br19 = $("#__br19");
+			var __label8 = $("#__label8");
+			var __br20 = $("#__br20");
+			var __br21 = $("#__br21");
+			var lightness = $("#lightness");
+			var __div4 = $("#__div4");
+			var __label9 = $("#__label9");
+			var __br22 = $("#__br22");
+			var __br23 = $("#__br23");
+			var amount = $("#amount");
+			var __br24 = $("#__br24");
+			var __label10 = $("#__label10");
+			var __br25 = $("#__br25");
+			var __br26 = $("#__br26");
+			var strength = $("#strength");
+			var __br27 = $("#__br27");
+			var __br28 = $("#__br28");
+			var mono = $("#mono").button();
+			var __div5 = $("#__div5");
+			var __label11 = $("#__label11");
+			var __br29 = $("#__br29");
+			var __br30 = $("#__br30");
+			var glow_amount = $("#glow_amount");
+			var __br31 = $("#__br31");
+			var __label12 = $("#__label12");
+			var __br32 = $("#__br32");
+			var __br33 = $("#__br33");
+			var radius = $("#radius");
+			var __br34 = $("#__br34");
+			var image_container = $("#image_container");
+        acc1.accordion({
+            fillSpace: true,
+        });
+        brightness.slider({
+    });
+        constrast.slider({
+    });
+        red.slider({
+    });
+        blue.slider({
+    });
+        green.slider({
+    });
+        hue.slider({
+    });
+        saturation.slider({
+    });
+        lightness.slider({
+    });
+        amount.slider({
+    });
+        strength.slider({
+    });
+        glow_amount.slider({
+    });
+        radius.slider({
+    });
+        if (application.init)
+            application.init();
+</script>
+</body>
 </html>
